- Use Functional style syntax - Migrate to `List.of()`, `Set.of()`, `Map.of()` - Other syntactic optimizations - Remove exceptions that are never thrown - More specific exceptions
Signed-off-by: subhramit <subhramit.bb@live.in>