@@ -1,6 +1,5 @@
 package org.jabref.gui.preferences;
 
-import java.util.Collections;
 import java.util.List;
 
 public interface PreferenceTabViewModel {
@@ -40,6 +39,6 @@ public interface PreferenceTabViewModel {
      * @return The messages for the changed properties (e. g. "Changed language: English")
      */
     default List<String> getRestartWarnings() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
