@@ -2,7 +2,7 @@ package org.jabref.gui.autocompleter;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.jabref.model.database.BibDatabase;
 import org.jabref.model.entry.BibEntry;
@@ -21,9 +21,9 @@ class ContentSelectorSuggestionProviderTest {
     @Test
     void completeWithoutAddingAnythingReturnsNothing() {
         SuggestionProvider<String> suggestionProvider = new EmptySuggestionProvider();
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.emptyList());
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of());
 
-        Collection<String> expected = Collections.emptyList();
+        Collection<String> expected = List.of();
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
 
         assertEquals(expected, result);
@@ -32,9 +32,9 @@ class ContentSelectorSuggestionProviderTest {
     @Test
     void completeKeywordReturnsKeyword() {
         SuggestionProvider<String> suggestionProvider = new EmptySuggestionProvider();
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.singletonList("test"));
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of("test"));
 
-        Collection<String> expected = Collections.singletonList("test");
+        Collection<String> expected = List.of("test");
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
 
         assertEquals(expected, result);
@@ -43,9 +43,9 @@ class ContentSelectorSuggestionProviderTest {
     @Test
     void completeBeginningOfKeywordReturnsKeyword() {
         SuggestionProvider<String> suggestionProvider = new EmptySuggestionProvider();
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.singletonList("test"));
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of("test"));
 
-        Collection<String> expected = Collections.singletonList("test");
+        Collection<String> expected = List.of("test");
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("te"));
 
         assertEquals(expected, result);
@@ -59,9 +59,9 @@ class ContentSelectorSuggestionProviderTest {
         database.insertEntry(bibEntry);
 
         SuggestionProvider<String> suggestionProvider = new WordSuggestionProvider(StandardField.KEYWORDS, database);
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.emptyList());
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of());
 
-        Collection<String> expected = Collections.singletonList("test");
+        Collection<String> expected = List.of("test");
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
 
         assertEquals(expected, result);
@@ -70,9 +70,9 @@ class ContentSelectorSuggestionProviderTest {
     @Test
     void completeUppercaseBeginningOfNameReturnsName() {
         SuggestionProvider<String> suggestionProvider = new EmptySuggestionProvider();
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.singletonList("test"));
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of("test"));
 
-        Collection<String> expected = Collections.singletonList("test");
+        Collection<String> expected = List.of("test");
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("TE"));
 
         assertEquals(expected, result);
@@ -86,9 +86,9 @@ class ContentSelectorSuggestionProviderTest {
     @Test
     void completeEmptyStringReturnsNothing() {
         SuggestionProvider<String> suggestionProvider = new EmptySuggestionProvider();
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.singletonList("test"));
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of("test"));
 
-        Collection<String> expected = Collections.emptyList();
+        Collection<String> expected = List.of();
         Collection<String> result = autoCompleter.provideSuggestions(getRequest(""));
 
         assertEquals(expected, result);
@@ -102,7 +102,7 @@ class ContentSelectorSuggestionProviderTest {
         database.insertEntry(bibEntry);
 
         SuggestionProvider<String> suggestionProvider = new WordSuggestionProvider(StandardField.KEYWORDS, database);
-        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, Collections.singletonList("testb"));
+        autoCompleter = new ContentSelectorSuggestionProvider(suggestionProvider, List.of("testb"));
 
         Collection<String> expected = Arrays.asList("testa", "testb");
         Collection<String> result = autoCompleter.provideSuggestions(getRequest("test"));
