@@ -2,7 +2,7 @@ package org.jabref.logic.pdf;
 
 import java.nio.file.Path;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import org.jabref.model.pdf.FileAnnotation;
@@ -18,27 +18,27 @@ class PdfAnnotationImporterTest {
 
     @Test
     void invalidPath() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("/asdf/does/not/exist.pdf")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("/asdf/does/not/exist.pdf")));
     }
 
     @Test
     void invalidDirectory() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("src/test/resources/pdfs")));
     }
 
     @Test
     void invalidDocumentType() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.docx")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.docx")));
     }
 
     @Test
     void noAnnotationsWriteProtected() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.pdf")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("src/test/resources/pdfs/write-protected.pdf")));
     }
 
     @Test
     void noAnnotationsEncrypted() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/encrypted.pdf")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("src/test/resources/pdfs/encrypted.pdf")));
     }
 
     @Test
@@ -48,7 +48,7 @@ class PdfAnnotationImporterTest {
 
     @Test
     void noAnnotationsMinimal() {
-        assertEquals(Collections.emptyList(), importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal.pdf")));
+        assertEquals(List.of(), importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal.pdf")));
     }
 
     @Test
@@ -56,7 +56,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 12, 20, 25), 1,
                 "inline note annotation", FileAnnotationType.FREETEXT, Optional.empty());
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-inlinenote.pdf")));
     }
 
@@ -65,7 +65,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 12, 20, 17, 24), 1,
                 "A simple pop-up note", FileAnnotationType.TEXT, Optional.empty());
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-popup.pdf")));
     }
 
@@ -75,7 +75,7 @@ class PdfAnnotationImporterTest {
                 "this is a foxit highlight", FileAnnotationType.HIGHLIGHT, Optional.empty());
         final FileAnnotation expected = new FileAnnotation("lynyus", LocalDateTime.of(2017, 5, 31, 15, 16, 1), 1,
                 "Hello", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-foxithighlight.pdf")));
     }
 
@@ -86,7 +86,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 12, 20, 28, 39), 1,
                 "World", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-highlight-no-note.pdf")));
     }
 
@@ -97,7 +97,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("lynyus", LocalDateTime.of(2017, 6, 1, 2, 40, 25), 1,
                 "ello", FileAnnotationType.SQUIGGLY, Optional.of(expectedLinkedAnnotation));
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-squiggly.pdf")));
     }
 
@@ -108,7 +108,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("lynyus", LocalDateTime.of(2017, 6, 1, 13, 2, 3), 1,
                 "World", FileAnnotationType.STRIKEOUT, Optional.of(expectedLinkedAnnotation));
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-strikeout.pdf")));
     }
 
@@ -119,7 +119,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 12, 20, 32, 2), 1,
                 "World", FileAnnotationType.HIGHLIGHT, Optional.of(expectedLinkedAnnotation));
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-highlight-with-note.pdf")));
     }
 
@@ -130,7 +130,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 12, 20, 36, 9), 1,
                 "Hello", FileAnnotationType.UNDERLINE, Optional.of(expectedLinkedAnnotation));
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-underline.pdf")));
     }
 
@@ -139,7 +139,7 @@ class PdfAnnotationImporterTest {
         final FileAnnotation expected = new FileAnnotation("Linus Dietz", LocalDateTime.of(2017, 3, 16, 9, 21, 1), 1,
                 "polygon annotation", FileAnnotationType.POLYGON, Optional.empty());
 
-        assertEquals(Collections.singletonList(expected),
+        assertEquals(List.of(expected),
                 importer.importAnnotations(Path.of("src/test/resources/pdfs/minimal-polygon.pdf")));
     }
 }
